--- a/user/config/system.yaml
+++ b/user/config/system.yaml
@@ -4,7 +4,7 @@ home:
   alias: '/home'
 
 pages:
-  theme: quark
+  theme: codecaviar-theme
   markdown:
     extra: false
   process:
@@ -30,6 +30,8 @@ assets:
   css_rewrite: true
   js_pipeline: false
   js_minify: true
+  collections:
+    jquery: system://assets/jquery/jquery-3.x.min.js
 
 errors:
   display: true
